Fixed hover animation overlapping navbar with z index

--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ li:active {
     justify-self: center;
 }
 #foods > div {
+    z-index: 1;
     padding: 40px;
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.50);
@@ -126,6 +127,7 @@ body {
 
 
 nav {
+    z-index: 20;
     position: sticky;
     top: 0;
     background-color: rgb(15, 15, 15);
